<resources>
    <string name="app_name">State Control</string>
    <string name="title_activity_navigation_bar">NavigationBarActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="monitoring">Monitoring</string>
    <string name="manage">Manage</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fan">Fan</string>
    <string name="status_close">Status: Close</string>
    <string name="state_working">State: working</string>

</resources>
